# gold_price

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily-etl.yml
etl/: __init__.py  alerts.py  backtest.py  compute.py  config.py  dxy.py  gta.py  indicators.py  intl.py  load.py  run.py  signals.py
supabase/migrations/: 0001_init.sql
web/: middleware.ts  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/components/: PriceChart.tsx  ui.tsx
web/lib/: dxy.ts  format.ts  indicators.ts  news.ts  queries.ts  realtime.ts  supabase.ts  ta.ts  trump.ts  types.ts
